--- a/browserstack_lesson/requirements.txt
+++ b/browserstack_lesson/requirements.txt
@@ -5,3 +5,8 @@ python-dotenv==0.20.0
 Appium-Python-Client~=2.6.1
 selenium~=4.2.0
 requests
+
+python -m venv .venv
+source .venv/bin/activate
+pip install -r requirements.txt
+pytest .
